pgp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: pgp
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: pgp
    app.kubernetes.io/name: pgp
    app.openshift.io/runtime: java
  name: pgp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgp
  template:
    metadata:
      labels:
        app: pgp
    spec:
      containers:
      - name: pgp
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/common-service/pgp:41fe42023b5d87b0106034d67cb5a333f5c05f69
        ports:
        - containerPort: 8482
          protocol: TCP
